--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "parser",
-  "version": "0.1.0",
+  "name": "costflow",
+  "version": "0.1.1",
   "description": "Costflow Parser",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/costflow/parser.git"
   },
-  "keywords": [],
+  "keywords": ["costflow", "ledger", "beancount", "hledger", "plain text accounting", "double-entry bookkeeping"],
   "author": "leplay",
   "bugs": {
     "url": "https://github.com/costflow/parser/issues"
