--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "costflow",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Costflow Parser",
   "main": "lib/index.js",
   "browser": "dist/index.min.js",
@@ -37,9 +37,9 @@
     "npm": ">=5.0.0"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "dayjs": "^1.8.36",
-    "squirrelly": "^7.8.0"
+    "axios": "^0.21.0",
+    "dayjs": "^1.9.4",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -47,13 +47,13 @@
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
-    "@types/squirrelly": "^7.1.1",
+    "@types/lodash": "^4.14.164",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "jest": "^24.8.0",
-    "jest-circus": "^26.4.2",
+    "jest": "^26.6.1",
+    "jest-circus": "^26.6.1",
     "path": "^0.12.7",
     "regenerator-runtime": "^0.13.7",
     "ts-jest": "^26.3.0",
