--- a/package.json
+++ b/package.json
@@ -1,22 +1,12 @@
 {
   "name": "costflow",
-  "version": "1.2.1",
+  "version": "2.0.0",
   "description": "Costflow Parser",
-  "main": "lib/index.js",
-  "browser": "dist/index.min.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/costflow.cjs.js",
+  "module": "dist/costflow.esm.js",
+  "browser": "dist/costflow.umd.js",
   "license": "GPL-3.0",
-  "scripts": {
-    "build": "tsc -v && tsc -b",
-    "clean": "rm -rf coverage lib dist",
-    "package": "webpack --mode development",
-    "package:analyze": "cross-env ANALYZE=true webpack --mode production",
-    "package:prod": "webpack --mode production",
-    "release": "npm run build && npm run package:prod && npm publish",
-    "test": "npm run build && jest",
-    "test:coverage": "npm run build && jest --coverage",
-    "watch": "tsc -b --watch"
-  },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/costflow/parser.git"
@@ -34,35 +24,47 @@
     "url": "https://github.com/costflow/parser/issues"
   },
   "homepage": "https://costflow.io/",
-  "engines": {
-    "node": ">=8.0.0",
-    "npm": ">=5.0.0"
+  "scripts": {
+    "build": "rollup -c",
+    "clean": "rm -rf coverage lib dist",
+    "dev": "rollup -c -w",
+    "test": "ava",
+    "pretest": "npm run build"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "axios": "^0.21.0",
-    "dayjs": "^1.9.4",
-    "lodash": "^4.17.20"
+    "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/lodash": "^4.14.164",
-    "babel-loader": "^8.1.0",
-    "core-js": "^3.6.5",
-    "cross-env": "^7.0.2",
-    "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "jest": "^26.6.1",
-    "jest-circus": "^26.6.1",
-    "path": "^0.12.7",
-    "regenerator-runtime": "^0.13.7",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.3",
-    "webpack": "^5.55.1",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^3.3.12"
+    "@rollup/plugin-commonjs": "^25.0.5",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "ava": "^5.3.1",
+    "rollup": "^4.0.2"
   },
-  "sideEffects": false
+  "ava": {
+    "files": [
+      "test/**/*.test.mjs",
+      "!test/exclude-files-in-this-directory",
+      "!**/exclude-files-with-this-name.*"
+    ],
+    "match": [],
+    "concurrency": 5,
+    "failFast": true,
+    "failWithoutAssertions": false,
+    "environmentVariables": {},
+    "verbose": true,
+    "require": [],
+    "nodeArguments": [
+      "--trace-deprecation",
+      "--napi-modules"
+    ]
+  },
+  "engines": {
+    "node": ">=16"
+  }
 }
